Update routes, views, and models for teams and scores functionality

--- a/views/includes/topbar.pug
+++ b/views/includes/topbar.pug
@@ -17,11 +17,14 @@ nav.bg-white.fixed.w-full.z-20.top-0.start-0.border-b.border-gray-200.font-nav1.
         #navbar-sticky.items-center.justify-between.w-full(class='lg:flex lg:w-auto lg:order-1')
           ul.flex.flex-col.font-medium.mt-2(class='md:p-0 lg:space-x-8 rtl:space-x-reverse lg:flex-row md:mt-0 xl:text-base sm:text-sm')
             li(class='flex-1 group w-52 m-auto')
-              a.block.py-2.px-3.text-gray-500.bg-white.rounded.text-center(href='/classement') Classement
+              a.block.py-2.px-3.text-gray-500.bg-white.rounded.text-center(href='/') Fil d'actualité
               span(class=" block w-7 mx-auto h-1 group-hover:bg-[#62b5e5] duration-300 rounded-full") 
             li(class='flex-1 group w-52 m-auto')
-              a.block.py-2.px-3.text-gray-500.rounded.text-center(href='/equipes') Equipes
+              a.block.py-2.px-3.text-gray-500.bg-white.rounded.text-center(href='/classement') Classement
               span(class=" block w-7 mx-auto h-1 group-hover:bg-[#62b5e5] duration-300 rounded-full") 
+            //- li(class='flex-1 group w-52 m-auto')
+            //-   a.block.py-2.px-3.text-gray-500.rounded.text-center(href='/equipes') Equipes
+            //-   span(class=" block w-7 mx-auto h-1 group-hover:bg-[#62b5e5] duration-300 rounded-full") 
             li(class='flex-1 group w-52 m-auto')
               a.block.py-2.px-3.text-gray-500.rounded.text-center(href='/profil') Profil
               span(class=" block w-7 mx-auto h-1 group-hover:bg-[#62b5e5] duration-300 rounded-full") 
