--- a/views/ranking.pug
+++ b/views/ranking.pug
@@ -20,8 +20,8 @@ block content
             tbody
                 - teams.sort((a, b) => b.rank.points - a.rank.points).forEach((team) => {
                     tr.border-b(class='odd:bg-white')
-                        th.px-6.py-4.font-medium.text-gray-700.whitespace-nowrap
-                            =team.teamname
+                        td.px-6.py-4.text-center.font-bold.text-gray-800
+                            a(href='/equipes/'+team._id)= team.teamname
                         td.px-6.py-4.text-center
                             =team.rank.playing   
                         td.px-6.py-4.text-center
