Update server configuration and form.post.pug view

--- a/views/post.list.pug
+++ b/views/post.list.pug
@@ -16,7 +16,7 @@ if posts
             div.mb-4.font-nav1(class="grid justify-items-end")
                 p(class="xl:text-base sm:text-sm text-gray-700")=post.date
                 span(class="xl:text-sm sm:text-xs text-gray-400")=post.hour
-            p.mb-3.font-normal.text-gray-600.text-justify.text-center(class="xl:text-base sm:text-sm")=post.message
+            p.mb-3.font-normal.text-gray-600.text-justify.text-center(class="text-sm lg:text-base")=post.message
             
         
 
