--- a/views/ranking.pug
+++ b/views/ranking.pug
@@ -1,7 +1,7 @@
 extends layout.pug 
 
 block content 
-    .relative.shadow-md.mx-10.mt-36(class='sm:rounded-lg' id='ranking')
+    .shadow-md.mx-10.mt-36(class='sm:rounded-lg' id='ranking')
         table.w-full.text-sm.text-gray-500
             thead.text-xs.text-gray-700.uppercase.bg-gray-50
                 tr
