--- a/views/form.post.pug
+++ b/views/form.post.pug
@@ -7,12 +7,12 @@ if userSession
           .flex.items-center.justify-between.px-3.py-2.border-t
             button.inline-flex.items-center.px-4(type='submit',class='text-xs py-2.5 text-white font-medium rounded-lg px-4 py-2 text-center bg-[#62b5e5] transition-all focus:opacity-[0.85] shadow-md shadow-cyan-600/40 active:opacity-[0.85] mr-2')
               | Envoyer
-            .flex.ps-0.space-x-1(class='rtl:space-x-reverse sm:ps-2')
+      //-       .flex.ps-0.space-x-1(class='rtl:space-x-reverse sm:ps-2')
 
-      form(action="/upload/imageform" method="post", id="imageForm", enctype="multipart/form-data" class="w-8/12 m-auto font-nav1")
-        label.inline-flex.justify-center.items-center.text-gray-500.rounded.cursor-pointer(for="image" type='button', class='hover:text-gray-500 hover:bg-gray-100 ')
-          svg.w-4.h-4(aria-hidden='true', xmlns='http://www.w3.org/2000/svg', fill='currentColor', viewBox='0 0 20 18')
-            path(d='M18 0H2a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2Zm-5.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3Zm4.376 10.481A1 1 0 0 1 16 15H4a1 1 0 0 1-.895-1.447l3.5-7A1 1 0 0 1 7.468 6a.965.965 0 0 1 .9.5l2.775 4.757 1.546-1.887a1 1 0 0 1 1.618.1l2.541 4a1 1 0 0 1 .028 1.011Z')
-          span.sr-only Upload image
-          input(type="file", style="display: none;" name="image" id="image" accept="image/*")
-          button(type="submit", class="ml-2") Import
+      //- form(action="/upload/imageform" method="post", id="imageForm", enctype="multipart/form-data" class="w-8/12 m-auto font-nav1")
+      //-   label.inline-flex.justify-center.items-center.text-gray-500.rounded.cursor-pointer(for="image" type='button', class='hover:text-gray-500 hover:bg-gray-100 ')
+      //-     svg.w-4.h-4(aria-hidden='true', xmlns='http://www.w3.org/2000/svg', fill='currentColor', viewBox='0 0 20 18')
+      //-       path(d='M18 0H2a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2Zm-5.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3Zm4.376 10.481A1 1 0 0 1 16 15H4a1 1 0 0 1-.895-1.447l3.5-7A1 1 0 0 1 7.468 6a.965.965 0 0 1 .9.5l2.775 4.757 1.546-1.887a1 1 0 0 1 1.618.1l2.541 4a1 1 0 0 1 .028 1.011Z')
+      //-     span.sr-only Upload image
+      //-     input(type="file", style="display: none;" name="image" id="image" accept="image/*")
+      //-     button(type="submit", class="ml-2") Import
