Add moment.js library for date and time manipulation and add reset password feature

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,6 +12,7 @@ html(lang="en" class="bg-gray-100")
         script(src="https://kit.fontawesome.com/090d5fde99.js" crossorigin="anonymous")
         script(src="/javascript/splide.min.js")
         script(src="/javascript/index.js")
+        script(src="https://cdn.jsdelivr.net/npm/sweetalert2@11")
         script(src="https://unpkg.com/axios/dist/axios.min.js")
 
 include includes/topbar.pug  
