--- a/views/loginBis.pug
+++ b/views/loginBis.pug
@@ -1,6 +1,7 @@
 extends layout.pug 
 
 block content
+  script(src="/javascript/auth-form.js")
     
   if error
     
@@ -15,6 +16,9 @@ block content
       .mb-5
       
         p(class="text-red-600 text-sm lg:text-base font-nav1")= error
+        div(class=" text-xs lg:text-sm")
+          p(id="forgot" class='text-gray-600 cursor-pointer w-4/12') Mot de passe oublié ?
+      .mb-5
         h1(class="text-xs lg:text-base") Vous devez vous connecter pour accéder à cette page
       
       button.rounded-lg.text-sm.px-5(type='submit', class='text-white font-medium rounded-lg px-4 py-2 text-center bg-[#62b5e5] transition-all focus:opacity-[0.85] shadow-md shadow-cyan-600/40 active:opacity-[0.85] xl:text-sm sd:text-xs') Connexion
@@ -28,9 +32,12 @@ block content
        
         label.block.mb-2.text-sm.text-gray-900(for='password') Votre mot de passe
         input#password.shadow-sm.bg-white.border.border-gray-300.text-gray-500.text-sm.rounded-lg.block.w-full.outline-none(type='password', class='focus:ring-[#62b5e5] focus:border-[#62b5e5] p-2.5',placeholder="*********",required='' name="password")
-      .mb-5
+      text
       
         p(class="text-red-700 text-sm font-nav1")= error
+        div(class=" text-xs lg:text-sm")
+          p(id="forgot" class='text-gray-600 cursor-pointer w-4/12') Mot de passe oublié ?
+      .mb-5
         h1(class="text-center text-xs lg:text-base") Vous devez vous connecter pour accéder à cette page
       
       button.rounded-lg.text-sm.px-5(type='submit', class='text-white font-medium rounded-lg px-4 py-2 text-center bg-[#62b5e5] transition-all focus:opacity-[0.85] shadow-md shadow-cyan-600/40 active:opacity-[0.85] xl:text-sm sd:text-xs') Connexion
